parametro-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: parametro-service
  namespace: default
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 8081
    targetPort: http
  selector:
          app: parametro
